[package]
name = "adsb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate = "*"
chrono = { version = "*", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "0.8", features = [
    "v4",
    "serde",
] } # For generating and using UUIDs
tokio = { version = "1", features = ["full"] }
